AM_CFLAGS = -Wall -march=native -fvisibility=hidden

noinst_LTLIBRARIES = libturbo.la

libturbo_la_SOURCES = \
	conv_dec.c \
	conv_enc.c \
	conv_rate_match.c \
	turbo_dec.c \
	turbo_enc.c \
	turbo_rate_match.c

noinst_HEADERS = \
	conv_gen.h \
	conv.h \
	conv_sse.h \
	rate_match.h \
	turbo.h \
	turbo_int.h \
	turbo_sse.h
